:bug: Alert z-index

--- a/app/styles/stylus/module/alertsElement.styl
+++ b/app/styles/stylus/module/alertsElement.styl
@@ -5,6 +5,7 @@
     transform translateX(-50%) translateY(-50%) scale(2)
     opacity 0
     transition opacity 150ms ease, transform 300ms ease
+    z-index 20
 
 .alerts__lastProject
     position absolute
@@ -13,3 +14,4 @@
     transform translateX(-50%) translateY(-50%) scale(2)
     opacity 0
     transition opacity 150ms ease, transform 300ms ease
+    z-index 20
